--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node ./www/server.js",
     "tsc": "npx tsc",
-    "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "dev": "npx ts-node-dev --respawn --transpileOnly ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
     "deploy": "npm run build && eb list && eb use udagram-api-dev && eb deploy",
@@ -33,7 +33,8 @@
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.5.0",
-    "sequelize-typescript": "^2.1.3"
+    "sequelize-typescript": "^2.1.3",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.26",
@@ -41,7 +42,7 @@
     "@types/express": "^4.16.1",
     "@types/node": "^11.11.6",
     "@types/sequelize": "^4.27.44",
-    "@types/validator": "^10.9.0",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "chai": "^4.2.0",
