--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -2,14 +2,11 @@
   "name": "udagram-api",
   "version": "2.0.0",
   "description": "",
-  "engines": {
-    "node": "14.15.0"
-  },
   "main": "server.ts",
   "scripts": {
     "start": "node ./www/server.js",
     "tsc": "npx tsc",
-    "dev": "npx ts-node-dev --respawn --transpileOnly ./src/server.ts",
+    "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
     "deploy": "npm run build && eb list && eb use udagram-api-dev && eb deploy",
@@ -32,7 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.5.0",
+    "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.3",
     "validator": "^13.7.0"
   },
@@ -41,7 +38,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.16.1",
     "@types/node": "^11.11.6",
-    "@types/sequelize": "^4.27.44",
+    "@types/sequelize": "^4.28.14",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
