--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,78 +1,67 @@
 version: 2.1
 orbs:
-  # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
+  # orbs contain basic recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@5.0.2
-  eb: circleci/aws-elastic-beanstalk@2.0.1
   aws-cli: circleci/aws-cli@3.1.1
+  eb: circleci/aws-elastic-beanstalk@3.20.3
   # different jobs are calles later in the workflows sections
+workflows:
+  main:
+    jobs:
+      - build:
+          filters:
+              branches:
+                only:
+                  - master
 jobs:
   build:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/node:14.15"
+    executor: node/default
     steps:
-      # install node and checkout code
-      - node/install:
-          node-version: '14.15'         
+      - node/install
       - checkout
+      - aws-cli/setup
+      - eb/setup
       # Use root level package.json to install dependencies in the frontend app
+      - restore_cache:
+          key: v1-deps-{{ checksum "udagram/udagram-frontend/package-lock.json" }}
       - run:
           name: Install Front-End Dependencies
           command: |
-            echo "NODE --version" 
-            echo $(node --version)
-            echo "NPM --version" 
-            echo $(npm --version)
             npm run frontend:install
-      # TODO: Install dependencies in the the backend API          
-      - run:
-          name: Install API Dependencies
-          command: |
-           echo "TODO: Install dependencies in the the backend API  "
-      # TODO: Lint the frontend
+      - save_cache:
+          key: v1-deps-{{ checksum "udagram/udagram-frontend/package-lock.json" }}
+          paths: 
+            - node_modules
+      # Lint the frontend
       - run:
           name: Front-End Lint
           command: |
-            echo "TODO: Lint the frontend"
-      # TODO: Build the frontend app
+            npm run frontend:lint
+      # Build the frontend app
       - run:
           name: Front-End Build
           command: |
-            echo "TODO: Build the frontend app"
-      # TODO: Build the backend API      
+            npm run frontend:build
+      # deploy the frontend app      
+      - run:
+          name: API deploy
+          command: |
+            npm run frontend:deploy      
+      # Install dependencies in the the backend API
+      - run:
+          name: Install API Dependencies
+          command: |
+            npm run api:install
+      # Build the backend API      
       - run:
           name: API Build
           command: |
-            echo "TODO: Build the backend API"
-  # deploy step will run only after manual approval
-  deploy:
-    docker:
-      - image: "cimg/base:stable"
-      # more setup needed for aws, node, elastic beanstalk
-    steps:
-      - node/install:
-          node-version: '14.15' 
-      - eb/setup
-      - aws-cli/setup
-      - checkout
+            npm run api:build
+      # deploy the backend API      
       - run:
-          name: Deploy App
-          # TODO: Install, build, deploy in both apps
+          name: API deploy
           command: |
-            echo "# TODO: Install, build, deploy in both apps"
-            
-workflows:
-  udagram:
-    jobs:
-      - build
-      - hold:
-          filters:
-            branches:
-              only:
-                - master
-          type: approval
-          requires:
-            - build
-      - deploy:
-          requires:
-            - hold
+            npm run api:deploy
