--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,9 @@ jobs:
       - image: "cimg/node:14.15"
     executor: node/default
     steps:
-      - node/install
       - checkout
+      - node/install:
+          node-version: "14.15"
       - aws-cli/setup
       - eb/setup
       # Use root level package.json to install dependencies in the frontend app
