--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -1,6 +1,9 @@
 {
   "name": "udagram-api",
   "version": "2.0.0",
+  "engines": {
+    "node": "14.15.0"
+  },
   "description": "",
   "main": "server.ts",
   "scripts": {
@@ -10,7 +13,7 @@
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
     "build": "npm install . && npm run clean && tsc && cp -rf src/config www/config && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
-    "deploy": "npm run build && eb list && eb use udagram-api-dev && eb deploy",
+    "deploy": "npm run build && eb list && eb use udagram-api-env && eb deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
