remove copy eb from scripts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
             npm run frontend:build
       # deploy the frontend app      
       - run:
-          name: API deploy
+          name: Front-End deploy
           command: |
             npm run frontend:deploy      
       # Install dependencies in the the backend API
