--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -12,7 +12,7 @@
     "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
-    "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
+    "build": "npm run clean && tsc && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
     "deploy": "eb list && eb use udagram-api-env && eb deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
