--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -13,7 +13,7 @@
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
     "build": "npm run clean && tsc && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
-    "deploy": "eb list && eb use udagram-api-env && eb deploy",
+    "deploy": "chmod +x ./bin/deploy.sh && bash ./bin/deploy.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
