remove node version from yml file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,7 @@ jobs:
     executor: node/default
     steps:
       - checkout
-      - node/install:
-          node-version: "14.15"
+      - node/install
       - aws-cli/setup
       - eb/setup
       # Use root level package.json to install dependencies in the frontend app
