--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -6,7 +6,7 @@
   },
   "description": "",
   "scripts": {
-    "start": "node .",
+    "start": "node server.js",
     "tsc": "npx tsc",
     "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
