--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -31,8 +31,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.28.0",
-    "sequelize-typescript": "^2.1.3",
+    "sequelize": "5.3.5",
+    "sequelize-typescript": "^0.6.11",
     "validator": "^13.7.0"
   },
   "devDependencies": {
