--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -19,8 +19,6 @@
   "author": "Gabriel Ruttner",
   "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "2.4.2",
-    "@types/jsonwebtoken": "^8.3.2",
     "aws-sdk": "^2.429.0",
     "bcryptjs": "2.4.3",
     "body-parser": "^1.18.3",
@@ -31,14 +29,15 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "5.3.5",
-    "sequelize-typescript": "^0.6.11",
+    "sequelize": "^5.3.5",
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
     "@types/bluebird": "^3.5.26",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^11.11.6",
     "@types/sequelize": "^4.28.14",
     "@types/validator": "^13.7.10",
@@ -49,6 +48,7 @@
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^6.1.4",
+    "sequelize-typescript": "^0.6.11",
     "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^4.2.3"
   }
