--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -1,10 +1,11 @@
 {
   "name": "udagram-api",
   "version": "2.0.0",
+  "description": "",
   "engines": {
     "node": "14.15.0"
   },
-  "description": "",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "tsc": "npx tsc",
@@ -19,6 +20,7 @@
   "author": "Gabriel Ruttner",
   "license": "ISC",
   "dependencies": {
+   
     "aws-sdk": "^2.429.0",
     "bcryptjs": "2.4.3",
     "body-parser": "^1.18.3",
@@ -29,7 +31,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.3.5",
+    "sequelize": "^6.28.0",
+    "sequelize-typescript": "^2.1.3",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -48,7 +51,6 @@
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "mocha": "^6.1.4",
-    "sequelize-typescript": "^0.6.11",
     "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^4.2.3"
   }
